# rust-rancher-cluster-installer

./: .gitignore  Cargo.toml  README.md  rancherinstaller:Zone.Identifier
.history/src/core/: config_20221204144008.rs  config_20221204144044.rs  config_20221204144058.rs  config_20221204144105.rs  config_20221204144400.rs  config_20221204144541.rs  config_20221204144551.rs  config_20221204144555.rs  config_20221204144602.rs  config_20221204144612.rs  config_20221204144614.rs  config_20221204144619.rs  config_20221204144634.rs  config_20221204144636.rs  config_20221204144644.rs  config_20221204144646.rs  config_20221204144647.rs  config_20221204144652.rs  config_20221204144746.rs
example/: servers.yaml
kubeconfig/: .gitignore
src/: lib.rs  main.rs
src/app/: mod.rs
src/builder/: mod.rs
src/config/: config.rs  installation.rs  mod.rs
src/core/: app.rs  config.rs  curl.rs  installation.rs  longhorn.rs  ssh.rs  yaml.rs
src/input/: mod.rs
src/kubernetes/: mod.rs
src/shared-types/: types.rs
src/ssh/: mod.rs
src/types/: mod.rs
src/utils/: measurable.rs  measureable.rs  mod.rs  sanitize.rs  spinner.rs
src/yaml/: mod.rs
tests/: test.rs
