[package]
name = "rancherinstaller"
version = "0.1.0"
edition = "2021"
include = ["/src"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "rancherinstaller"
path = "src/main.rs"

[dependencies]
colored = "2"
terminal-spinners = "0.3.2"
ssh2 = "0.9"
openssl-sys = "0.9"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
