[package]
name = "rancherinstaller"
version = "0.1.2"
edition = "2021"
include = ["/src"]
authors = ["omer atagun", "omer atagun<omratagn@gmail.com>"]
homepage= "https://github.com/omeratagunn/rust-rancher-cluster-installer"
license= "MIT"
keywords = ["rancher, k3s installer, kubernetes"]
exclude = ["example", "kubeconfig"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "rancherinstaller"
path = "src/main.rs"

[dependencies]
colored = "2"
terminal-spinners = "0.3.2"
ssh2 = "0.9"
openssl-sys = "0.9"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
more-asserts= {version = "0.3.1"}
clap = { version = "4.0.32", features = ["derive"] }
